--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Matt Vogel",
   "devDependencies": {
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "tslib": "^2.4.0"
   },
   "dependencies": {
     "roamjs-components": "^0.72.4"
